--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
   "dependencies": {
     "jspdf": "^4.1.0",
     "jspdf-autotable": "^5.0.7"
+  },
+  "devDependencies": {
+    "@types/jspdf": "^1.3.3"
   }
 }
